# string

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
src/: CMakeLists.txt  example.cpp  example.h  mofish.h
test/: CMakeLists.txt  add_test.cpp  mul_test.cpp
